<resources>
    <string name="app_name">Let\'s Story</string>
    <string name="photo_logo_image">photo logo image</string>
    <string name="tv_my_story_share">My Story Share</string>
    <string name="register_greeting">We are here to you for sharing your moment with your beloved</string>
    <string name="input_your_password">Input your password</string>
    <string name="input_your_email">Input your email</string>
    <string name="input_the_description">Input the description</string>
    <string name="input_your_name">Input your name</string>
    <string name="share_story_logo">Share Story Logo</string>
    <string name="share_story">My Share Story</string>
    <string name="email">Email</string>
    <string name="sign_up_now">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login_success">Login Success!</string>
    <string name="login_failed">Login Failed!</string>
    <string name="register_success">Register Success!</string>
    <string name="register_failed">Register Failed!</string>
    <string name="welcome_user">Welcome %1s</string>
    <string name="log_out">log out</string>
    <string name="form_could_not_be_empty">%1s form could not be empty</string>
    <string name="invalid_email">Email not valid</string>
    <string name="duplicate_email">Email is already used.</string>
    <string name="let_s_complete_this_form">Let\'s fill this form</string>
    <string name="name_user">Name</string>
    <string name="password">Password</string>
    <string name="invalid_password">Please input password character more than 6</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="fill_to_share">Fill this form to share your moment</string>
    <string name="share_your_moment">Share Your Moment Now</string>
    <string name="profile_icon">profile icon</string>
    <string name="story_photo">story photo</string>
    <string name="story_detail">Story Detail</string>
    <string name="description">Description</string>
    <string name="add_photo">Add photo</string>
    <string name="add">Add</string>
    <string name="upload_image_success">Success upload story</string>
    <string name="upload_image_error">Error upload story.</string>
    <string name="add_photo_desc_loc">Please add photo, description, and location.</string>
    <string name="fetching_api_failed">Sorry there is an error while fetching API</string>
    <string name="max_size_upload_1mb">Max size upload 1Mb</string>
    <string name="icon_gallery">icon gallery</string>
    <string name="icon_camera">icon camera</string>
    <string name="icon_rotate">icon rotate</string>
    <string name="image_result">image result</string>
    <string name="list_empty_text">List is empty.</string>
    <string name="taking_photo_success">Success taking the photo.</string>
    <string name="taking_photo_failed">Failed when taking the photo.</string>
    <string name="camera_need_permission">Camera need permission.</string>
    <string name="open_camera_failed">Camera could not be opened</string>
    <string name="text_retry">Retry</string>
    <string name="latlon">%1s, %2s</string>
    <string name="map_icon">Map icon</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="click_here_to_select_your_location">Choose location on right</string>
    <string name="icon_maps">Icon Maps</string>
    <string name="choose_location">Choose location</string>
    <string name="user_location">User Location</string>
    <string name="location">Location</string>
</resources>