<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_pink"
    app:layoutDescription="@xml/fragment_login_scene"
    tools:context=".ui.primary.login.LoginFragment">

    <ImageView
        android:id="@+id/ivPhotoLogo"
        android:layout_width="180dp"
        android:layout_height="199dp"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/share_story_logo"
        android:src="@drawable/ic_photo_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginGreeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/fill_to_share"
        android:textColor="@color/purple_201"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPhotoLogo" />

    <TextView
        android:id="@+id/tvEmailLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        android:labelFor="@id/etEmail"
        android:text="@string/email"
        android:textSize="14sp"
        android:textColor="@color/purple_201"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginGreeting" />

    <com.dicoding.mysharestory.MyEditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="7dp"
        android:hint="@string/input_your_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmailLabel" />

    <TextView
        android:id="@+id/tvLabelPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        android:labelFor="@id/etPassword"
        android:text="@string/password"
        android:textColor="@color/purple_201"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <com.dicoding.mysharestory.MyEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="7dp"
        android:hint="@string/input_your_password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelPassword" />

    <LinearLayout
        android:id="@+id/llContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="@id/etPassword">

        <ProgressBar
            android:id="@+id/progressLoading"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="52dp"
            android:backgroundTint="@color/purple_201"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/bg_radius_10dp_stroke"
            android:text="@string/sign_in"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/purple_201" />

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/back"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/purple_201" />

    </LinearLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>