<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.DetailStoryFragment">

    <TextView
        android:id="@+id/tvDetailStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="55dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/purple_201"
        android:text="@string/story_detail"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingTop="24dp"
        android:paddingBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llPhoto"
                android:layout_width="match_parent"
                android:layout_height="315dp"
                android:background="@drawable/bg_radius_18dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="72dp"
                    android:contentDescription="@string/add_photo"
                    android:src="@drawable/ic_photo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/max_size_upload_1mb"
                    android:textColor="@color/light_pink" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ivStory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/story_photo"
                android:scaleType="fitXY"
                tools:src="@drawable/dummy_photo" />

            <TextView
                android:id="@+id/tvLabelNameUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textStyle="bold|normal"
                android:textSize="14sp"
                android:textColor="@color/purple_201"
                android:labelFor="@id/etNameUser"
                android:text="@string/name_user" />

            <com.dicoding.mysharestory.MyEditText
                android:id="@+id/etNameUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:paddingHorizontal="20dp"
                android:paddingVertical="16dp"
                tools:text="Ayu Kirana Vijayanti" />

            <TextView
                android:id="@+id/tvLocLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textStyle="bold|normal"
                android:textSize="14sp"
                android:labelFor="@id/etUserLoc"
                android:textColor="@color/purple_201"
                android:text="@string/location"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <com.dicoding.mysharestory.MyEditText
                    android:id="@+id/etUserLoc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="3"
                    android:drawableStart="@drawable/ic_maps"
                    android:enabled="false"
                    android:hint="@string/choose_location"
                    android:inputType="text"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="16dp"/>

                <ImageView
                    android:id="@+id/ivTagLocation"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_radius_18dp"
                    android:backgroundTint="@color/red"
                    android:padding="18dp"
                    android:src="@drawable/ic_maps"
                    android:contentDescription="@string/location"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textStyle="bold|normal"
                android:textSize="14sp"
                android:textColor="@color/purple_201"
                android:labelFor="@id/etDescription"
                android:text="@string/description" />

            <com.dicoding.mysharestory.MyEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:enabled="false"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:hint="@string/input_the_description"
                android:inputType="textMultiLine"
                android:paddingHorizontal="20dp"
                android:paddingVertical="16dp"
                tools:text="@tools:sample/lorem/random" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBack"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/log_out"
        android:src="@drawable/ic_back"
        android:tint="@color/red"
        app:backgroundTint="@color/light_pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnUploadStory"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/add"
        android:src="@drawable/ic_confirm"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>