<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_pink"
    app:layoutDescription="@xml/fragment_sign_up_scene"
    tools:context=".ui.primary.signup.SignUpFragment">

    <TextView
        android:id="@+id/tvGreetingSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/let_s_complete_this_form"
        android:textColor="@color/purple_701"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nvScrollContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tvGreetingSignUp"
        app:layout_constraintStart_toStartOf="@id/tvGreetingSignUp"
        app:layout_constraintTop_toBottomOf="@id/tvGreetingSignUp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Email -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/etEmail"
                    android:text="@string/email"
                    android:textColor="@color/purple_501"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <com.dicoding.mysharestory.MyEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:hint="@string/input_your_email"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="16dp"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <!-- Full Name -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:labelFor="@id/etNameUser"
                    android:text="@string/name_user"
                    android:textColor="@color/purple_501"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <com.dicoding.mysharestory.MyEditText
                    android:id="@+id/etNameUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:hint="@string/input_your_name"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="16dp"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <!-- Password -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:labelFor="@id/etPassword"
                    android:text="@string/password"
                    android:textColor="@color/purple_501"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <com.dicoding.mysharestory.MyEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:hint="@string/input_your_password"
                    android:inputType="textPassword"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="16dp"
                    android:textSize="14sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/purple_201"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_radius_10dp_stroke"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/purple_201" />

                <TextView
                    android:id="@+id/tvBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:paddingVertical="12dp"
                    android:text="@string/back"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/purple_201" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>