<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefresh"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_201"
        tools:context=".ui.story.ListStoryFragment">

        <TextView
            android:id="@+id/tvUserName"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold|normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="55dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Welcome Ayu!" />

        <TextView
            android:id="@+id/tvShowYourMoment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/share_your_moment"
            app:layout_constraintStart_toStartOf="@id/tvUserName"
            app:layout_constraintTop_toBottomOf="@id/tvUserName" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="30dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvShowYourMoment"
            app:layout_constraintTop_toBottomOf="@id/tvShowYourMoment" />

        <TextView
            android:id="@+id/tvEmptyList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="30dp"
            android:text="@string/list_empty_text"
            android:textColor="@color/red"
            android:textStyle="normal"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvUserName"
            app:layout_constraintTop_toBottomOf="@id/tvShowYourMoment" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListStory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="100dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvUserName"
            app:layout_constraintTop_toBottomOf="@id/tvShowYourMoment"
            tools:listitem="@layout/item_story"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnLogout"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:contentDescription="@string/log_out"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/purple_501"
            android:src="@drawable/ic_logout"
            app:backgroundTint="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAdd"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="55dp"
            android:contentDescription="@string/add"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnMaps"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginEnd="28dp"
            android:src="@drawable/ic_maps"
            android:contentDescription="@string/icon_maps"
            app:layout_constraintTop_toTopOf="@id/btnAdd"
            app:layout_constraintBottom_toBottomOf="@id/btnAdd"
            app:layout_constraintEnd_toStartOf="@id/btnAdd"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
